--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react": "^16.11.0",
     "react-bmap": "^1.0.117",
     "react-dom": "^16.11.0",
+    "react-redux": "^7.2.0",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.2.0",
